--- a/src/nmd5tool/package.json
+++ b/src/nmd5tool/package.json
@@ -1,12 +1,19 @@
 {
+  "comments": [
+    "build with 'npm run-script webpack'"
+  ],
   "name": "nmd5tool",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private":true,
+  "main": "nmd5tool.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack": "npx webpack --config webpack.config.js && cp dist/nmd5tool.js ../../bin/"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  }
 }
